[package]
name = "ethers-utils"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
ethereum-types = { version = "0.9.2", default-features = false, features = ["serialize"] }
tiny-keccak = { version = "2.0.2", default-features = false }
serde = { version = "1.0.110", default-features = false }
serde_json = { version = "1.0.53", default-features = false, features = ["alloc"] }
