[package]
name = "ethers"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[features]
default = ["full"]
full = [
    "abi",
    "contract",
    "providers",
    "signers",
    "types",
    "utils",
]

abi = ["ethers-abi"]
contract = ["ethers-contract"]
providers = ["ethers-providers"]
signers = ["ethers-signers"]
types = ["ethers-types"]
utils = ["ethers-utils"]

[dependencies]
ethers-abi = { path = "../ethers-abi", optional = true }
ethers-contract = { path = "../ethers-contract", optional = true }
ethers-providers = { path = "../ethers-providers", optional = true }
ethers-signers = { path = "../ethers-signers", optional = true }
ethers-types = { path = "../ethers-types", optional = true }
ethers-utils = { path = "../ethers-utils", optional = true }

[dev-dependencies]
anyhow = "1.0.31"
tokio = { version = "0.2.21", features = ["macros"] }
serde_json = "1.0.53"
rand = "0.5.1" # note: when passing RNGs, they must be with version 0.5.1
serde = { version = "1.0.110", features = ["derive"] }
