[package]
name = "ethers"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[features]
default = ["full"]
full = [
    "contract",
    "providers",
    "signers",
    "core",
]

contract = ["ethers-contract"]
providers = ["ethers-providers"]
signers = ["ethers-signers"]
core = ["ethers-core"]

[dependencies]
ethers-contract = { version = "0.1.0", path = "../ethers-contract", features = ["abigen"], optional = true }
ethers-providers = { version = "0.1.0", path = "../ethers-providers", optional = true }
ethers-signers = { version = "0.1.0", path = "../ethers-signers", optional = true }
ethers-core = { version = "0.1.0", path = "../ethers-core", optional = true }

[dev-dependencies]
anyhow = "1.0.31"
tokio = { version = "0.2.21", features = ["macros"] }
serde_json = "1.0.53"
rand = "0.5.1" # note: when passing RNGs, they must be with version 0.5.1
serde = { version = "1.0.110", features = ["derive"] }
