[package]
name = "ethers-contract-derive"
authors = [
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
    "Georgios Konstantopoulos <me@gakonst.com>",
]
readme = "README.md"
description = "Proc macros for type-safe bindings generation to Ethereum smart contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
ethers-core.workspace = true
ethers-contract-abigen.workspace = true

proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.109"

serde_json = "1.0.93"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
eyre = "0.6"
