[package]
name = "ethers-derive-eip712"
version = "1.0.2"
edition = "2021"
rust-version = "1.64"
description = "Custom derive macro for EIP-712 typed data"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = "1.0.109"
ethers-core = { version = "^1.0.0", path = "../", default-features = false, features = [
    "eip712",
    "macros",
] }
hex = "0.4.3"
serde_json = "1.0.93"

[dev-dependencies]
ethers-contract-derive = { version = "^1.0.0", path = "../../ethers-contract/ethers-contract-derive" }
