[package]
name = "ethers-derive-eip712"
authors = ["Ryan Tate <ryan.michael.tate@gmail.com>"]
description = "Derive procedural macro for EIP-712 typed data"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = "1.0.109"
ethers-core = { version = "^1.0.0", path = "../", default-features = false, features = [
    "eip712",
    "macros",
] }
hex = "0.4.3"
serde_json = "1.0.93"

[dev-dependencies]
ethers-contract-derive = { version = "^1.0.0", path = "../../ethers-contract/ethers-contract-derive" }
