[package]
name = "examples-anvil"
version = "0.0.0"
publish = false
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]

rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
ethers = { path = "../../ethers" }

eyre = "0.6"
tokio = { version = "1.25", features = ["full"] }
