[package]
name = "examples-anvil"
version = "0.0.0"
publish = false
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
ethers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
eyre.workspace = true
