[package]
name = "examples-contracts"
version = "0.0.0"
publish = false
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]

rust-version.workspace = true
edition.workspace = true

[features]
default = ["legacy"]
legacy = ["ethers/legacy"]

[dev-dependencies]
ethers = { path = "../../ethers", features = ["abigen", "ethers-solc", "rustls", "ws"] }

eyre = "0.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25", features = ["macros"] }
