[package]
name = "examples-contracts"
version = "0.0.0"
publish = false
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["legacy"]
legacy = ["ethers/legacy"]

[dev-dependencies]
ethers = { workspace = true, features = ["abigen", "ethers-solc", "rustls", "ws"] }

tokio = { workspace = true, features = ["macros"] }

serde.workspace = true
serde_json.workspace = true

eyre.workspace = true
