[package]
name = "ethers-wasm"
version = "0.0.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
license = "MIT OR Apache-2.0"

rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ethers = { workspace = true, features = ["abigen", "ethers-solc", "rustls", "ws"] }

serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.4.5"
hex.workspace = true

wasm-bindgen-futures = "0.4.34"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

web-sys = { version = "0.3.61", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
