[package]
name = "examples-events"
version = "1.0.2"
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]
edition = "2021"

[dev-dependencies]
ethers = { path = "../..", version = "1.0.0" }

eyre = "0.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25", features = ["macros"] }
