[package]
name = "examples-events"
version = "2.0.0"
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]
edition = "2021"

[dev-dependencies]
ethers = { path = "../..", version = "2.0.0" }

eyre = "0.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.18", features = ["macros"] }
