[package]
name = "examples-events"
version = "0.0.0"
publish = false
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
ethers = { workspace = true, features = ["rustls", "ws"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

serde.workspace = true
serde_json.workspace = true

eyre.workspace = true
